--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -250,6 +250,7 @@ blockquote,
   &.blockquote-reverse{
     border: 1px solid $primary-color;
     text-align: right;
+    padding: 30px 30px 23px 30px;
     footer,
     small{
       text-align: right;
