--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -3254,6 +3254,8 @@ article.post-item {
 
 .posted-on time {
   display: none; }
+  .posted-on time.published {
+    display: block; }
 
 .posted-on .entry-date
 .published {
