--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -2782,7 +2782,7 @@ article.post-item {
   time{
     display: none;
     &.published{
-      display: block;
+      display: inline-block;
     }
   }
 }
