--- a/wp-content/themes/wingman/assets/css/queries.css
+++ b/wp-content/themes/wingman/assets/css/queries.css
@@ -1,217 +1,2 @@
-/*
- * Title:   Responsive Style File
- * Author:  http://themeforest.net/user/Kite-Themes
- */
-/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-[Table of contents]
-
-1. Styles for devices(<=1300px)
-2. Styles for devices(>=1200px)
-3. Styles for devices(<=1199px)
-4. Styles for devices(<=991px )
-5. Styles for devices(>=768px and <= 991px)
-6. Styles for devices(<=767px )
-7. Styles for devices(>=481px and <= 767px)
-8. Styles for devices(<=480px )
-9. Styles for devices(<=320px )
-*/
-/* -------------------------------------------------------------
-  Sass CSS3 Mixins! The Cross-Browser CSS3 Sass Library
-  By: Matthieu Aussaguel, http://www.mynameismatthieu.com, @matthieu_tweets
-------------------------------------------------------------- */
-/* -------------------------------------------------------------
- * Title:   SCSS VARIABLES
- * Author:  http://themeforest.net/user/Kite-Themes
-------------------------------------------------------------- */
-/* 1. Retina logo */
-@media only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5), only screen and (min-resolution: 144dpi) {
-  .site-branding .site-logo.retina-logo-wrapper .retina-logo {
-    display: block; }
-
-  .site-branding .site-logo.retina-logo-wrapper .default-logo {
-    display: none; } }
-/* 8. Styles for devices(<=1199px) */
-@media (max-width: 1199px) {
-  .sticky-placeholder,
-  #header-content,
-  #header-inner > .container,
-  .nav-container-inner {
-    display: none; }
-
-  #header-content-mobile {
-    display: block; }
-
-  .woocommerce .woocommerce-per-page select:not([multiple]),
-  .woocommerce .woocommerce-ordering select:not([multiple]) {
-    min-width: 212px; } }
-@media (max-width: 991px) {
-  .woocommerce table.cart tbody td.actions {
-    padding: 20px; }
-    .woocommerce table.cart tbody td.actions a, .woocommerce table.cart tbody td.actions input {
-      margin: 0 2%; }
-  .woocommerce div.product .product-detail-thumbarea.slick-carousel {
-    padding: 0; }
-    .woocommerce div.product .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails {
-      position: relative;
-      margin: 0 -14px;
-      width: auto; }
-      .woocommerce div.product .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-slide {
-        margin: 0 14px; }
-
-  .entry-share-box a {
-    margin-left: 30px; }
-
-  .wrapper-comingsoon.style1 .coming-soon .wrap {
-    display: inline-block;
-    width: 50%;
-    float: left; }
-    .wrapper-comingsoon.style1 .coming-soon .wrap:nth-child(2n) {
-      border: none; }
-  .wrapper-comingsoon.style2 .coming-soon .wrap {
-    width: 50%;
-    margin-bottom: 20px; }
-    .wrapper-comingsoon.style2 .coming-soon .wrap:nth-child(3), .wrapper-comingsoon.style2 .coming-soon .wrap:nth-child(4) {
-      margin-bottom: 0; } }
-@media (max-width: 991px) {
-  .woocommerce-products-carousel-tab ul.block-heading-tabs li {
-    display: block;
-    margin: 0 0 15px; }
-    .woocommerce-products-carousel-tab ul.block-heading-tabs li:last-child {
-      margin-bottom: 0; }
-
-  .woocommerce-category-products-tab ul.block-heading-tabs li {
-    display: block;
-    margin: 0 0 15px; }
-    .woocommerce-category-products-tab ul.block-heading-tabs li:last-child {
-      margin-bottom: 0; }
-
-  .testimonial-carousel-wrapper .owl-carousel-kt .owl-pagination .owl-page {
-    width: 50px;
-    height: 50px;
-    margin: 10px 15px; }
-
-  .woocommerce .upsells-products > h3,
-  .woocommerce .related-products > h3,
-  .woocommerce .cross-sells > h3 {
-    font-size: 30px; } }
-@media (max-width: 767px) {
-  .main-class.col-md-12 .blog-posts-list .entry-main-content,
-  .main-class.col-md-12 .blog-posts-list .list-media-wrapper {
-    width: 100%;
-    margin: 0 0 30px; }
-
-  .blog-posts-list .list-media-wrapper,
-  .blog-posts-list .entry-main-content {
-    width: 100%;
-    margin: 0 0 30px; }
-
-  .woocommerce table.cart tbody td.actions a,
-  .woocommerce table.cart tbody td.actions input {
-    width: 100% !important;
-    margin: 0; }
-  .woocommerce table.cart tbody td.actions a {
-    margin-bottom: 10px; }
-  .woocommerce table.wishlist_table tr td.product-remove {
-    padding: 16px 10px 16px 0; }
-
-  .table-responsive {
-    border-color: #e5e5e5; }
-
-  .comment-list li ul.children {
-    padding-left: 0; }
-
-  .themedev-product-popup.woocommerce.add-content .product-details-info,
-  .themedev-product-popup.woocommerce.add-content .product-detail-images {
-    width: 100%;
-    padding: 30px; } }
-@media (max-width: 600px) {
-  .woocommerce ul.shop-products.lists li.product .product-image-container,
-  .woocommerce ul.shop-products.lists li.product .product-attr-container {
-    width: 100%;
-    margin: 0 0 30px;
-    padding: 0; }
-  .woocommerce .upsells-products > h3,
-  .woocommerce .related-products > h3,
-  .woocommerce .cross-sells > h3 {
-    font-size: 30px; }
-
-  body.opened-nav-animate.admin-bar #wpadminbar {
-    margin-top: -46px; }
-
-  .wrapper-comingsoon.style3 .coming-soon {
-    text-align: center;
-    display: inline-block; }
-    .wrapper-comingsoon.style3 .coming-soon .wrap {
-      width: 50%;
-      float: left;
-      margin-bottom: 20px; }
-      .wrapper-comingsoon.style3 .coming-soon .wrap:before, .wrapper-comingsoon.style3 .coming-soon .wrap:after {
-        display: none; } }
-@media (max-width: 480px) {
-  .comment-content {
-    padding: 0;
-    border: none; }
-    .comment-content > .star-rating {
-      float: none;
-      margin-bottom: 10px; }
-
-  .comment-meta {
-    padding: 0; }
-
-  .woocommerce-before-shop form.woocommerce-ordering, .woocommerce-before-shop form.woocommerce-per-page {
-    width: 100%;
-    margin: 0 0 30px; }
-
-  #customer_details .woocommerce-billing-fields > p,
-  #customer_details .woocommerce-shipping-fields > p {
-    padding: 0; }
-    #customer_details .woocommerce-billing-fields > p label,
-    #customer_details .woocommerce-shipping-fields > p label {
-      position: static; }
-
-  .page-header h1.page-header-title {
-    font-size: 30px;
-    padding: 0 30px; }
-
-  .page-header {
-    padding-top: 30px; }
-
-  .wrapper-googlemap .content-map {
-    padding: 20px; }
-
-  .shop-products .product {
-    width: 100% !important; }
-
-  .wrapper-comingsoon.style1 .coming-soon .wrap {
-    float: none;
-    display: block;
-    border: none;
-    border-bottom: 1px solid #dfdfdf;
-    margin: 0 30px 20px;
-    padding: 0 0 20px; }
-    .wrapper-comingsoon.style1 .coming-soon .wrap:nth-child(2n) {
-      border-bottom: 1px solid #dfdfdf; }
-    .wrapper-comingsoon.style1 .coming-soon .wrap:last-child {
-      border: none; }
-  .wrapper-comingsoon.style2 .coming-soon .wrap {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 20px; }
-    .wrapper-comingsoon.style2 .coming-soon .wrap:nth-child(3) {
-      margin-bottom: 20px; }
-    .wrapper-comingsoon.style2 .coming-soon .wrap:nth-child(4) {
-      margin-bottom: 0; }
-
-  .woocommerce-edit-address form p.form-row {
-    padding: 0; }
-    .woocommerce-edit-address form p.form-row label {
-      position: static; }
-
-  #customer_details .woocommerce-billing-fields p.form-row,
-  #customer_details .woocommerce-shipping-fields p.form-row {
-    padding: 0; }
-    #customer_details .woocommerce-billing-fields p.form-row label,
-    #customer_details .woocommerce-shipping-fields p.form-row label {
-      position: static; } }
-
+@media only screen and (-o-min-device-pixel-ratio: 3 / 2), only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-device-pixel-ratio: 1.5), only screen and (min-resolution: 144dpi){.site-branding .site-logo.retina-logo-wrapper .retina-logo{display:block}.site-branding .site-logo.retina-logo-wrapper .default-logo{display:none}}@media (max-width: 1199px){.sticky-placeholder,#header-content,#header-inner>.container,.nav-container-inner{display:none}#header-content-mobile{display:block}.woocommerce .woocommerce-per-page select:not([multiple]),.woocommerce .woocommerce-ordering select:not([multiple]){min-width:212px}}@media (max-width: 991px){.entry-share-box a{margin-left:30px}.wrapper-comingsoon.style1 .coming-soon .wrap{display:inline-block;width:50%;float:left}.wrapper-comingsoon.style1 .coming-soon .wrap:nth-child(2n){border:none}.wrapper-comingsoon.style2 .coming-soon .wrap{width:50%;margin-bottom:20px}.wrapper-comingsoon.style2 .coming-soon .wrap:nth-child(3),.wrapper-comingsoon.style2 .coming-soon .wrap:nth-child(4){margin-bottom:0}.woocommerce-products-carousel-tab ul.block-heading-tabs li{display:block;margin:0 0 15px}.woocommerce-products-carousel-tab ul.block-heading-tabs li:last-child{margin-bottom:0}.woocommerce-category-products-tab ul.block-heading-tabs li{display:block;margin:0 0 15px}.woocommerce-category-products-tab ul.block-heading-tabs li:last-child{margin-bottom:0}.testimonial-carousel-wrapper .owl-carousel-kt .owl-pagination .owl-page{width:50px;height:50px;margin:10px 15px}.woocommerce table.cart tbody td.actions{padding:20px}.woocommerce table.cart tbody td.actions a,.woocommerce table.cart tbody td.actions input{margin:0 2%}.woocommerce div.product .product-detail-thumbarea.slick-carousel{padding:0}.woocommerce div.product .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails{position:relative;margin:0 -14px;width:auto}.woocommerce div.product .product-detail-thumbarea.slick-carousel .single-product-main-thumbnails .slick-slide{margin:0 14px}.woocommerce .upsells-products>h3,.woocommerce .related-products>h3,.woocommerce .cross-sells>h3{font-size:30px}}@media (max-width: 767px){.main-class.col-md-12 .blog-posts-list .entry-main-content,.main-class.col-md-12 .blog-posts-list .list-media-wrapper{width:100%;margin:0 0 30px}.blog-posts-list .list-media-wrapper,.blog-posts-list .entry-main-content{width:100%;margin:0 0 30px}.woocommerce table.cart tbody td.actions a,.woocommerce table.cart tbody td.actions input{width:100% !important;margin:0}.woocommerce table.cart tbody td.actions a{margin-bottom:10px}.woocommerce table.wishlist_table tr td.product-remove{padding:16px 10px 16px 0}.table-responsive{border-color:#e5e5e5}.comment-list li ul.children{padding-left:0}.themedev-product-popup.woocommerce.add-content .product-details-info,.themedev-product-popup.woocommerce.add-content .product-detail-images{width:100%;padding:30px}}@media (max-width: 600px){.woocommerce ul.shop-products.lists li.product .product-image-container,.woocommerce ul.shop-products.lists li.product .product-attr-container{width:100%;margin:0 0 30px;padding:0}.woocommerce .upsells-products>h3,.woocommerce .related-products>h3,.woocommerce .cross-sells>h3{font-size:30px}body.opened-nav-animate.admin-bar #wpadminbar{margin-top:-46px}.wrapper-comingsoon.style3 .coming-soon{text-align:center;display:inline-block}.wrapper-comingsoon.style3 .coming-soon .wrap{width:50%;float:left;margin-bottom:20px}.wrapper-comingsoon.style3 .coming-soon .wrap:before,.wrapper-comingsoon.style3 .coming-soon .wrap:after{display:none}}@media (max-width: 480px){.comment-content{padding:0;border:none}.comment-content>.star-rating{float:none;margin-bottom:10px}.comment-meta{padding:0}.woocommerce-before-shop form.woocommerce-ordering,.woocommerce-before-shop form.woocommerce-per-page{width:100%;margin:0 0 30px}#customer_details .woocommerce-billing-fields>p,#customer_details .woocommerce-shipping-fields>p{padding:0}#customer_details .woocommerce-billing-fields>p label,#customer_details .woocommerce-shipping-fields>p label{position:static}.page-header h1.page-header-title{font-size:30px;padding:0 30px}.page-header{padding-top:30px}.wrapper-googlemap .content-map{padding:20px}.shop-products .product{width:100% !important}.wrapper-comingsoon.style1 .coming-soon .wrap{float:none;display:block;border:none;border-bottom:1px solid #dfdfdf;margin:0 30px 20px;padding:0 0 20px}.wrapper-comingsoon.style1 .coming-soon .wrap:nth-child(2n){border-bottom:1px solid #dfdfdf}.wrapper-comingsoon.style1 .coming-soon .wrap:last-child{border:none}.wrapper-comingsoon.style2 .coming-soon .wrap{width:100%;text-align:center;margin-bottom:20px}.wrapper-comingsoon.style2 .coming-soon .wrap:nth-child(3){margin-bottom:20px}.wrapper-comingsoon.style2 .coming-soon .wrap:nth-child(4){margin-bottom:0}.woocommerce-edit-address form p.form-row{padding:0}.woocommerce-edit-address form p.form-row label{position:static}#customer_details .woocommerce-billing-fields p.form-row,#customer_details .woocommerce-shipping-fields p.form-row{padding:0}#customer_details .woocommerce-billing-fields p.form-row label,#customer_details .woocommerce-shipping-fields p.form-row label{position:static}}
 /*# sourceMappingURL=queries.css.map */
